bin_PROGRAMS = dreadlock

dreadlock_SOURCES = cbustype.h	cinstance.h cmodule.h cportconn.cc csymbol.h csymbol.cc cvcref.h main.cc parse.yy  \
	cbus.cc	cdecl.cc cmodel.cc cobject.h cportconn.h csymtab.h defs.h main.h cbus.h	cdecl.h	cmodel.h \
	cobstack.cc crule.h cvc.cc lex.h message.cc cbustype.cc	cinstance.cc cmodule.cc	\
	cvc.h lex.ll message.h

BUILT_SOURCES = parse.hh
AM_YFLAGS = -d
